# swagger/snail-dev-oas30.json
@@ -24,6 +24,27 @@
           }
         } ],
         "responses": {}
+      },
+      "put": {
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateProduct"
+              }
+            }
+          }
+        },
+        "responses": {}
       }
     },
     "/products" : {
@@ -57,6 +78,19 @@
           }
         },
         "responses": {}
+      }
+    },
+    "/categories/{id}" : {
+      "get" : {
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses": {}
       },
       "put": {
         "parameters" : [ {
@@ -72,7 +106,40 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/updateProduct"
+                "$ref": "#/components/schemas/updateCategory"
+              }
+            }
+          }
+        },
+        "responses": {}
+      }
+    },
+    "/categories" : {
+      "get" : {
+        "parameters" : [
+          {
+            "name" : "limit",
+            "in" : "query",
+            "schema" : {
+              "type" : "string"
+            }
+          }, {
+          "name" : "page",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        }
+        ],
+        "responses": {}
+      },
+      "post" : {
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/postCategory"
               }
             }
           }
@@ -88,6 +155,9 @@
         "properties": {
           "name": {
             "type": "string"
+          },
+          "price": {
+            "type": "number"
           }
         }
       },
@@ -96,6 +166,31 @@
         "properties": {
           "name": {
             "type": "string"
+          },
+          "price": {
+            "type": "number"
+          }
+        }
+    },
+      "postCategory": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "parent_id": {
+            "type": "number"
+          }
+        }
+      },
+      "updateCategory": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "parent_id": {
+            "type": "number"
           }
         }
     }
